# AlgebraMatrix

./: CMakeLists.txt
MatrixSolver/: CMakeLists.txt  LICENSE.txt  Main.cpp  MatrixSolver.cpp  MatrixSolver.h  MatrixSolverTests.cpp  MatrixSolverTests.h  TestMatrixSolver.cpp  TestMatrixSolver.h
